2003-06-24  Dominique Devriese  <devriese@kde.org>

	* fix a crash bug reported by Pino Toscano, that occurs because
	TextLabelRedefineMode was not yet updated to the new
	reference-counting Object's stuff..

2003-06-21  Dominique Devriese  <devriese@kde.org>

	* Implement Select all, Unselect all and Invert selection.

	
2003-06-20  Dominique Devriese  <devriese@kde.org>

	* fix this bug:"17) Add the possiblity, by pressing Esc, to stop
	the selection, even of the area to be shown."

	* add an icon for Arc's center property, this fixes: "12) Why
	don't you use baseCircle.png as icon to show/construct the center
	of a circle and (why not?) an arc?"

	* fix: a text label constructed using "add text label" from an
	object popup wasn't properly calced after construction..

	* fix this bug: "2) Add the possibility to set shortcut for all
	the actions & objects (For examples: Ctrl+P to construct a point,
	Ctrl+R to start a reflection, and so on...).", and add some
	default accels too ( "p" for point, "s" for segment etc. ( note :
	no control key ).

	* fix this bug: "3) When I select a segment, in his popup there are
	two same entry in Construct submenu, called Mid point an
	Midpoint. Why?" as reported by Pino Toscano
	

2003-06-11  Dominique Devriese  <devriese@kde.org>

	* move transformations to their own menu entry, thanks to Pino
		Toscano

	* move angle stuff to their own objects submenu, and toolbar,
		thanks to Pino Toscano

	* update the images in the docs, thanks to Pino Toscano

2003-06-04  Dominique Devriese  <devriese@kde.org>

	* show an appropriate error when trying to open an non-existing
		file..

	* clean up the object parent-child relation mechanism.  Rather
	large code cleanup, that simplifies a lot of code..  Needed a
	backwards-compatible file format extension.  This commit now also
	adds proper treatment of internal objects, because it no longer
	relies on the inherently wrong isInternal() hack, but features The
	Correct Fix(tm).
